# retrovault

./: .gitattributes  .gitignore  NOTICE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-cores.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/com/retrovault/app/: AudioTest.kt  CheatTest.kt  CloudSaveTest.kt  CompatReportTest.kt  FeelTest.kt  FirstLightTest.kt  GameDbTest.kt  GamepadP9Test.kt  InputTest.kt  LegalTest.kt  LibraryIdentifyTest.kt  NetplayTest.kt  OnboardingPrefsTest.kt  P10Test.kt  ProbeCoreTest.kt  Ps1Test.kt  RaTest.kt  RenderTest.kt  RenderTestActivity.kt  SaveStateTest.kt  SettingsTest.kt  ShaderTest.kt  SkinTest.kt  StoreTest.kt  TestGames.kt
app/src/debug/: AndroidManifest.xml
app/src/foss/java/com/retrovault/app/: CrashReporting.kt
app/src/full/: AndroidManifest.xml
app/src/full/java/com/retrovault/app/: CrashReporting.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/coresystem/PPSSPP/: compat.ini
app/src/main/assets/gamedb/: snapshot.json
app/src/main/java/com/retrovault/app/: MainActivity.kt  RetroVaultApp.kt
app/src/main/java/com/retrovault/app/navigation/: Destinations.kt  RetroVaultRoot.kt
app/src/main/java/com/retrovault/app/util/: Format.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  continue_widget_info.xml  data_extraction_rules.xml
core-emulator/: build.gradle.kts
core-emulator/src/main/cpp/: CMakeLists.txt  README.md  audio_out.cpp  audio_out.h  libretro_host.cpp  rc_bridge.cpp  rc_bridge.h  rc_host.h  video_gl.cpp  video_gl.h
core-emulator/src/main/cpp/rcheevos/: PROVENANCE.md
core-emulator/src/main/java/com/retrovault/emulator/: CoreAssets.kt  CoreCatalog.kt  DeviceCapabilities.kt  EmulatorSession.kt  Input.kt  LibretroBridge.kt  RaBridge.kt  RaCredentialStore.kt  RaHttpPump.kt  RetroAchievementsSession.kt
core-input/: build.gradle.kts
core-input/src/main/: AndroidManifest.xml
core-input/src/main/java/com/retrovault/input/: BindWizard.kt  ControllerDb.kt  ControllerMapping.kt  GamepadMapper.kt  Haptics.kt  HotplugMonitor.kt  InputHub.kt  PulsarSkin.kt  RemapStore.kt  SkinStore.kt  TouchOverlayView.kt
core-model/: build.gradle.kts
core-ui/: build.gradle.kts
data-billing/: build.gradle.kts
data-billing/src/foss/java/com/retrovault/billing/: BillingManagerFactory.kt  FreeBillingManager.kt
data-billing/src/full/java/com/retrovault/billing/: BillingManagerFactory.kt  PlayBillingManager.kt
data-billing/src/main/java/com/retrovault/billing/: BillingManager.kt  Entitlements.kt  GoldFeature.kt  MonetizationConfig.kt
data-cheats/: build.gradle.kts
data-cheats/src/main/java/com/retrovault/cheats/: CheatDb.kt  CheatManager.kt  Ps1CheatCodes.kt
data-download/: build.gradle.kts
data-download/src/main/java/com/retrovault/download/: BiosStatus.kt  DownloadManager.kt  DownloadModels.kt  GameDownloadWorker.kt  GameInstaller.kt  Ps1Bios.kt  RomImporter.kt  RomStorage.kt  Sha256.kt  SignedUrlClient.kt
data-library/: build.gradle.kts
data-saves/: build.gradle.kts
data-saves/src/main/java/com/retrovault/saves/: CloudSaveClient.kt  CloudSaveSync.kt  ConflictResolver.kt  RawFrames.kt  SaveModels.kt  SaveStateManager.kt  SaveStore.kt  SaveSyncClient.kt
data-settings/: build.gradle.kts
data-settings/src/main/java/com/retrovault/settings/: AdhocMac.kt  BackendPolicy.kt  DeviceClass.kt  GameDb.kt  Ps1Settings.kt  PspSettings.kt  SettingDefs.kt  SettingsResolver.kt  SettingsStore.kt
data-supabase/: build.gradle.kts
data-supabase/src/main/java/com/retrovault/data/: AuthClient.kt  AuthManager.kt  CatalogDto.kt  CatalogRepository.kt  CompatReporter.kt  SupabaseCatalogRepository.kt  SupabaseConfig.kt
design/pulsar/: Pulsar.dc.html
docs/: DISTRIBUTION.md  FDROID.md  LAUNCH_CHECKLIST.md  MASTERPLAN.md  NETPLAY.md  PLAN.md  PRIVACY.md  STAGES.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt
fdroid/: com.retrovault.app.yml
feature-player/: build.gradle.kts
feature-player/src/main/: AndroidManifest.xml
feature-store/: build.gradle.kts
feature-store/src/full/: AndroidManifest.xml
gradle/: libs.versions.toml
scripts/: fetch-cores.ps1
supabase/: README.md
supabase/functions/get-download-url/: index.ts
supabase/functions/verify-purchase/: index.ts
supabase/migrations/: 0001_initial_schema.sql  0002_rls_and_storage.sql  0003_seed.sql  0004_harden_functions.sql
tools/gamedb-import/: import.mjs
(+52 files in other folders)
